WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
290455
Fix some missing exception checks
https://bugs.webkit.org/show_bug.cgi?id=290455
Summary
Fix some missing exception checks
daniel_liu4
Reported
2025-03-26 09:34:53 PDT
rdar://144781310
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-03-26 09:36:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/43041
EWS
Comment 2
2025-03-26 14:05:29 PDT
Committed
292722@main
(3c1c73a86585): <
https://commits.webkit.org/292722@main
> Reviewed commits have been landed. Closing PR #43041 and removing active labels.
EWS
Comment 3
2025-03-27 11:52:38 PDT
Committed
289651.348@safari-7621-branch
(f0885f21fc31): <
https://commits.webkit.org/289651.348@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2898 and removing active labels.
Marta Darbinyan
Comment 4
2025-03-31 16:22:30 PDT
Reopened Bugzilla. REGRESSION(
292722@main
?): [macOS iOS Debug] imported/w3c/web-platform-tests/workers/abrupt-completion.html is a flaky crash, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=290546
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug