Cherry-pick 3c1c73a86585. rdar://147960595

Fix some missing exception checks
    https://bugs.webkit.org/show_bug.cgi?id=290455
    rdar://144781310

    Reviewed by Yusuke Suzuki.

    This adds in some missing exception checks caught by our validator.

    * Source/WebCore/bindings/js/SerializedScriptValue.cpp:
    (WebCore::CloneSerializer::serialize):
    (WebCore::CloneDeserializer::deserialize):
    (WebCore::SerializedScriptValue::create):
    (WebCore::SerializedScriptValue::deserialize):

    Canonical link: https://commits.webkit.org/292722@main

Canonical link: https://commits.webkit.org/289651.348@safari-7621-branch